--- a/E22_JuliePro_Master-Depart_TP2/JuliePro/JuliePro/Resources/Views.Home.Index.en.resx
+++ b/E22_JuliePro_Master-Depart_TP2/JuliePro/JuliePro/Resources/Views.Home.Index.en.resx
@@ -117,7 +117,7 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="You will never have the butt you want if you sit on the butt you have." xml:space="preserve">
+  <data name="home" xml:space="preserve">
     <value>You will never have the butt you want if you sit on the butt you have.</value>
   </data>
 </root>
